ios/ios.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ios
  labels:
    app: ios
  namespace: ios
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ios
  template:
    metadata:
      labels:
        app: ios
    spec:
      containers:
      - name: ios
        image: finab/bark-server
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ios
  namespace: ios
spec:
  selector:
    app: ios
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
