ios/ngg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngg
  labels:
    app: ngg
  namespace: ngg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngg
  template:
    metadata:
      labels:
        app: ngg
    spec:
      containers:
      - name: ngg
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nfs-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nfs-volume
        nfs:
          server: 91.200.242.222
          path: /var/nfs/general
---
apiVersion: v1
kind: Service
metadata:
  name: ngg
  namespace: ngg
spec:
  selector:
    app: ngg
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
