ios/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ios
  namespace: ios
spec:
  ingressClassName: "nginx"
  rules:
  - host: ios.errorstaff.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ios
            port:
              number: 80
